log/futures.0.3.31.log
[futures] download directory: /var/tmp/top100_artifacts/futures-0.3.31
+ curl -sL https://crates.io/api/v1/crates/futures/0.3.31/download
+ tar xzf -
+ cd /var/tmp/top100_artifacts/futures-0.3.31
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 75 packages to latest compatible versions
      Adding tokio v0.1.22 (available: v1.47.1)
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling autocfg v1.5.0
   Compiling libc v0.2.175
   Compiling cfg-if v0.1.10
   Compiling maybe-uninit v2.0.0
   Compiling lazy_static v1.5.0
   Compiling futures v0.1.31
   Compiling semver-parser v0.7.0
   Compiling crossbeam-utils v0.7.2
   Compiling slab v0.4.11
   Compiling semver v0.9.0
   Compiling iovec v0.1.4
   Compiling rustc_version v0.2.3
   Compiling scopeguard v1.2.0
   Compiling log v0.4.28
   Compiling proc-macro2 v1.0.101
   Compiling tokio-executor v0.1.10
   Compiling unicode-ident v1.0.19
   Compiling byteorder v1.5.0
   Compiling parking_lot_core v0.6.3
   Compiling parking_lot v0.9.0
   Compiling net2 v0.2.39
   Compiling num_cpus v1.17.0
   Compiling bytes v0.4.12
   Compiling memoffset v0.5.6
   Compiling quote v1.0.40
   Compiling smallvec v0.6.14
   Compiling tokio-io v0.1.13
   Compiling syn v2.0.106
   Compiling mio v0.6.23
   Compiling lock_api v0.3.4
   Compiling crossbeam-epoch v0.8.2
   Compiling fnv v1.0.7
   Compiling tokio-sync v0.1.8
   Compiling tokio-reactor v0.1.12
   Compiling futures-core v0.3.31
   Compiling futures-sink v0.3.31
   Compiling crossbeam-deque v0.7.4
   Compiling futures-channel v0.3.31
   Compiling tokio-codec v0.1.2
   Compiling crossbeam-queue v0.2.3
   Compiling memchr v2.7.5
   Compiling pin-utils v0.1.0
   Compiling futures-task v0.3.31
   Compiling futures-io v0.3.31
   Compiling pin-project-lite v0.2.16
   Compiling tokio-threadpool v0.1.18
   Compiling mio-uds v0.6.8
   Compiling tokio-uds v0.2.7
   Compiling tokio-udp v0.1.6
   Compiling tokio-tcp v0.1.4
   Compiling tokio-current-thread v0.1.7
   Compiling tokio-fs v0.1.7
   Compiling tokio-timer v0.2.13
   Compiling static_assertions v1.1.0
   Compiling assert_matches v1.5.0
   Compiling tokio v0.1.22
   Compiling futures-macro v0.3.31
   Compiling pin-project-internal v1.1.10
   Compiling futures-util v0.3.31
   Compiling pin-project v1.1.10
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31 (/var/tmp/top100_artifacts/futures-0.3.31)
error: `futures` tests must have all stable features activated: use `--all-features` or `--features default,thread-pool,io-compat`
  --> tests/_require_features.rs:10:1
   |
10 | / compile_error!(
11 | |     "`futures` tests must have all stable features activated: \
12 | |     use `--all-features` or `--features default,thread-pool,io-compat`"
13 | | );
   | |_^

error: could not compile `futures` (test "_require_features") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/stream_abortable.rs:6:5
  |
6 | use futures_test::task::new_count_waker;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
6 - use futures_test::task::new_count_waker;
6 + use futures_task::task::new_count_waker;
  |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `futures` (test "stream_abortable") due to 1 previous error
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/sink.rs:9:5
  |
9 | use futures_test::task::panic_context;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
9 - use futures_test::task::panic_context;
9 + use futures_task::task::panic_context;
  |

error: could not compile `futures` (test "sink") due to 1 previous error
+ RESULT=101
+ cd /var/tmp/top100_artifacts
+ rm -rf /var/tmp/top100_artifacts/futures-0.3.31
+ exit 101
